--- a/templates/pedidos/pedido_list.html
+++ b/templates/pedidos/pedido_list.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Lista de Pedidos{% endblock %}
+{% block title %}Lista de Solicitações{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1 class="mb-0">Lista de Pedidos</h1>
+    <h1 class="mb-0">Lista de Solicitações</h1>
     <a href="{% url 'pedido_create' %}" class="btn btn-success" name="novo_pedido">
-        <i class="bi bi-plus-circle me-1"></i> Novo Pedido
+        <i class="bi bi-plus-circle me-1"></i> Nova Solicitação
     </a>
 </div>
 
