--- a/templates/pedidos/pedido_list.html
+++ b/templates/pedidos/pedido_list.html
@@ -67,7 +67,7 @@
                 <td>{{ pedido.centro_custo }}</td>
                 <td>{{ pedido.status }}</td>
                 <td class="text-center">
-                    <a href="{% url 'pedido_update' pedido.numero %}" class="btn btn-sm btn-warning me-1">
+                    <a href="{% url 'pedido_update' pedido.numero %}?safra={{ pedido.safra }}" class="btn btn-sm btn-warning me-1">
                         <i class="bi bi-pencil"></i> Editar
                     </a>
                     <a href="{% url 'pedido_delete' pedido.numero %}" class="btn btn-sm btn-danger" onclick="return confirm('Tem certeza que deseja excluir este pedido?');">
